fix: move tabs below current nav menu on mobile

--- a/components/IndexTabs/IndexTabs.scss
+++ b/components/IndexTabs/IndexTabs.scss
@@ -5,7 +5,7 @@
     position: sticky;
     top: calc(var(--header-height, 0) - 2px);
     background: rgba(255, 255, 255, 1);
-    z-index: 100;
+    z-index: 99;
 
     .tabs {
         --tab-vertical-padding: 20px;
